misc tweaks & update
slightly reworked the logic where projectile velocity status is synchronized to the client;
many boss-related projectiles are reworked to use less bandwidth and are displayed much more smoothly on the client side;
damage reduction will now effect on-contact debuff duration;
tweaked mounts' mobility

--- a/server/plugins/Terraria/Data/buff.yml
+++ b/server/plugins/Terraria/Data/buff.yml
@@ -723,9 +723,9 @@ effects:
   弑神者冲刺:
     isBuff: true
     attributes:
-        damageTakenMulti: -1
+        damageTakenMulti: -0.4
         knockbackResistance: 1
-    tooltip: 下次受到攻击时减少50%受到伤害并无视击退
+    tooltip: 获得30%伤害减免并无视击退，受到攻击时进入冷却
   神弑者之停息:
     isBuff: false
     tooltip: 你需要稍等片刻才能再次使用弑神者冲刺
