--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -11267,9 +11267,8 @@ Dodu的手炮:
 耀界之光:
   item: DIAMOND_SWORD
   lore:
-  - §r向光标位置发射五道元素能量束
+  - §r向光标位置发射元素能量束
   - §r命中敌怪或击中物块时，元素能量束会分裂出元素能量体
-  - §r或召唤可以反弹的元素射线从天而降
   - §r它的威严激发了无与伦比的天才壮举
   attributes:
     damage: 180
