bugfix and tweaks
pre-hardmode boss tweaks

--- a/server/plugins/Terraria/Data/blocks.yml
+++ b/server/plugins/Terraria/Data/blocks.yml
@@ -62,6 +62,10 @@ RED_ROSE_6:
   totalProgress: 1
   dropItem:
   - 丛林孢子:2:3
+RED_ROSE_7:
+  totalProgress: 1
+  dropItem:
+  - 大自然的恩赐
 81834b91-513d-450f-b920-6880fd47c997:
   totalProgress: 1
   dropItem:
