--- a/server/plugins/Terraria/Data/projectiles.yml
+++ b/server/plugins/Terraria/Data/projectiles.yml
@@ -190,7 +190,7 @@
 坠星:
     gravity: 0
     projectileSize: 1.5
-    penetration: 999999
+    minimumDamageTicks: 999999
 彗星:
     gravity: 0
     projectileSize: 2
@@ -246,7 +246,7 @@
     homingMethod: 2
     homingRadius: 24
     homingSharpTurning: false
-    homingAbility: 0.5
+    homingAbility: 6
     noHomingTicks: 10
     maxHomingTicks: 40
     liveTime: 80
@@ -280,7 +280,7 @@
     homingMethod: 2
     homingRadius: 24
     homingSharpTurning: false
-    homingAbility: 0.5
+    homingAbility: 7.5
     liveTime: 100
     gravity: 0
     projectileSize: 1
@@ -320,7 +320,7 @@
     homingMethod: 2
     homingRadius: 32
     homingSharpTurning: false
-    homingAbility: 0.5
+    homingAbility: 10
     noHomingTicks: 15
     maxHomingTicks: 40
     trailVanillaParticle: false
@@ -347,7 +347,7 @@
     homingMethod: 2
     homingRadius: 32
     homingSharpTurning: false
-    homingAbility: 0.6
+    homingAbility: 12
     buffInflict:
         - "霜火|40|1"
         - "冷冻|30|1"
@@ -5668,6 +5668,12 @@ TNT:
     gravity: 0
     projectileSize: 0.5
     liveTime: 60
+绝望之光:
+    projDisguiseName: 绝望光束
+    projectileSize: 0.5
+    gravity: 0
+    buffInflict:
+        - "剧毒|30|1"
 阴暗球:
     noGravityTicks: 0
     blockHitAction: stick
@@ -7668,11 +7674,11 @@ TNT:
         - "霜火|60|1"
 海神之台风:
     gravity: 0
-    liveTime: 50
+    liveTime: 80
     projectileSize: 1
     blockHitAction: bounce
     bounce: 9
-    penetration: 4
+    penetration: 2
     homing: true
     homingSharpTurning: false
     homingAbility: 32
