--- a/server/plugins/Terraria/Data/weapons.yml
+++ b/server/plugins/Terraria/Data/weapons.yml
@@ -134,18 +134,18 @@
 烈焰剑:
   type: SWING
   autoSwing: true
-  size: 4
+  size: 4.5
   particleColor:
   - 255|150|0
 永夜之刃:
   type: SWING
   autoSwing: true
-  size: 4.5
+  size: 3.5
   particleColor:
   - 0|0|175
   projectileInfo:
     interval: 2
-    velocity: 2
+    velocity: 2.25
     noGravity: true
     name: 永夜光束
 剑鱼:
@@ -328,7 +328,11 @@
 绝望之刃:
   type: SWING
   autoSwing: true
-  size: 5
+  size: 3
+  projectileInfo:
+    interval: 1
+    velocity: 1.85
+    name: 绝望之光
 灼炎弯刀:
   type: SWING
   autoSwing: true
@@ -339,7 +343,7 @@
   size: 3.5
   projectileInfo:
     interval: 1
-    velocity: 1.5
+    velocity: 2
     name: 阴暗球
 风之刃:
   type: SWING
@@ -1255,108 +1259,108 @@
     name: 疯狂飞斧
 木制悠悠球:
   type: YOYO
-  reach: 11
+  reach: 16
   velocity: 1
   duration: 80
 抑郁球:
   type: YOYO
-  reach: 14
+  reach: 24
   velocity: 1.2
   duration: 100
 亚马逊悠悠球:
   type: YOYO
-  reach: 13
+  reach: 24
   velocity: 1.1
   duration: 120
 克苏鲁之眼悠悠球:
   type: YOYO
-  reach: 23
+  reach: 40
   velocity: 1.75
   duration: 1200
 泰拉悠悠球:
   type: YOYO
-  reach: 32
+  reach: 48
   velocity: 2.5
   duration: 1200
   recoilPoolMultiplier: 0.6
 烟陨彗星:
   type: YOYO
-  reach: 15
+  reach: 20
   velocity: 1.25
   duration: 100
 涡旋:
   type: YOYO
-  reach: 18
+  reach: 24
   velocity: 1.35
   duration: 100
 空旋:
   type: YOYO
-  reach: 20
+  reach: 32
   velocity: 1.25
   duration: 120
 神旨:
   type: YOYO
-  reach: 25
+  reach: 32
   velocity: 1.5
   duration: 120
 阴阳:
   type: YOYO
-  reach: 25
+  reach: 32
   velocity: 1.5
   duration: 150
 烁光:
   type: YOYO
-  reach: 28
+  reach: 36
   velocity: 1.6
   duration: 150
 遗殇:
   type: YOYO
-  reach: 32
+  reach: 40
   velocity: 1.65
   duration: 180
 泥潭:
   type: YOYO
-  reach: 30
+  reach: 40
   velocity: 1.75
   duration: 225
 断层:
   type: YOYO
-  reach: 30
+  reach: 40
   velocity: 2
   duration: 250
 瘟疫狂潮:
   type: YOYO
-  reach: 30
+  reach: 44
   velocity: 2.15
   duration: 350
 微波辐照:
   type: YOYO
-  reach: 32
+  reach: 44
   velocity: 2.25
   duration: 400
 日炎:
   type: YOYO
-  reach: 35
+  reach: 48
   velocity: 2.5
   duration: 800
 裂魔:
   type: YOYO
-  reach: 40
+  reach: 56
   velocity: 2.5
   duration: 700
 混沌射线:
   type: YOYO
-  reach: 45
+  reach: 56
   velocity: 2.75
   duration: 1500
 神谕:
   type: YOYO
-  reach: 50
+  reach: 56
   velocity: 3
   duration: 1750
 阿撒托斯:
   type: YOYO
-  reach: 55
+  reach: 64
   velocity: 2.5
   duration: 1500
 链锤:
@@ -1397,13 +1401,13 @@
   - t/ols
 海胆链枷:
   type: FLAIL
-  reach: 20
+  reach: 24
   velocity: 2.5
   canRotate: true
   autoSwing: true
 海胆链球:
   type: FLAIL
-  reach: 16
+  reach: 20
   velocity: 2.5
   autoSwing: true
 海蚌锤:
@@ -1413,7 +1417,7 @@
   autoSwing: true
 风滚草:
   type: FLAIL
-  reach: 24
+  reach: 32
   velocity: 2.75
   autoSwing: true
 星云鞭:
