solar armorset nerf

--- a/server/plugins/Terraria/Data/messages.yml
+++ b/server/plugins/Terraria/Data/messages.yml
@@ -159,6 +159,7 @@ deathMessages:
   - <victim> 在死后的世界冲浪
   - <victim> 的运气用光了
   - <victim> 满身疮痍
+  - <victim> 被挂在了地灵殿门口
   - <victim> 的死毫无意义
   - <victim> 面带安详
   - <victim> 的骨灰像雨点一样飘落
