--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -1129,7 +1129,7 @@
 亵渎碎片:
   item: CLAY_BALL
   lore:
-  - §r白天在神圣之地使用以召唤亵渎守卫
+  - §r在神圣之地使用以召唤亵渎守卫
   - §r亵渎天神存活时暂不可用
   - §r“她的守护者正在搜寻如此浩瀚能量的盗取者。”
   - §r附近月球领主后玩家均可参与挑战
@@ -1137,7 +1137,7 @@
 亵渎晶核:
   item: CLAY_BALL
   lore:
-  - §r白天在神圣之地使用以召唤亵渎天神
+  - §r在神圣之地使用以召唤亵渎天神
   - §r亵渎守卫存活时暂不可用
   - §r“她的守卫的心脏，她将会用污亵的烈焰焚尽现在正掌控它的人。”
   - §r附近月球领主后玩家均可参与挑战
@@ -1189,6 +1189,7 @@
   lore:
   - §r在没有BOSS存活时使用以激活Boss Rush模式
   - §rBoss Rush事件将在地面世界进行
+  - §r仅有击败硫火女巫以及星流巨械的玩家可参与此事件
   rarity: 1
 测试刮痧:
   item: LEASH
