signus & the old duke balancing

--- a/server/plugins/Terraria/Data/armorSet.yml
+++ b/server/plugins/Terraria/Data/armorSet.yml
@@ -1241,7 +1241,7 @@ sets:
     - §a套装效果：
     - §a近战攻速提升15%
     - §a受到伤害时有25%的几率获得4秒的生命涌流增益，增加6点生命恢复
-    - §a你可以按下套装增益键[默认为V]来被生命能量包裹，获得龙蒿披风增益10秒
+    - §a你可以按下套装增益键[默认为V]来被生命能量包裹，在10秒内减少受到的接触伤害
     - §a这个效果结束之后有30秒的冷却时间
     attributes:
       useSpeedMeleeMulti: 0.15
@@ -1431,7 +1431,7 @@ sets:
     - §a继承龙蒿套装、血炎套装和弑神者套装近战头盔的效果
     - §b-> §a继承自龙蒿套装的效果：
     - §a受到伤害时有25%的几率获得4秒的生命涌流增益，增加6点生命恢复
-    - §a你可以按下套装增益键[默认为V]来被生命能量包裹，获得龙蒿披风增益10秒
+    - §a你可以按下套装增益键[默认为V]来被生命能量包裹，在10秒内减少受到的接触伤害
     - §a这个效果结束之后有30秒的冷却时间
     - §b-> §a继承自血炎套装的效果：
     - §a+6 生命恢复
